Slideshow: Working on thumbsup button - Reverted

--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -16,82 +16,52 @@
         <div class="slideshow-container">
             <div class="mySlides">
                 <img src="images/slideshow/pencil.jpg" alt="P - Pencil">
-                <div class="caption">
-                    <span>P - Pencil</span>
-                    <button class="thumbs-like"><i class="fa fa-thumbs-up"></i></button>
-                </div>
+                <div class="caption">P - Pencil</div>
                 <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/router.jpg" alt="R - Router">
-                <div class="caption">
-                    <span>R - Router</span>
-                    <button class="thumbs-like"><i class="fa fa-thumbs-up"></i></button>
-                </div>
+                <div class="caption">R - Router</div>
                 <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/outlet.jpg" alt="O - Outlet">
-                <div class="caption">
-                    <span>O - Outlet</span>
-                    <button class="thumbs-like"><i class="fa fa-thumbs-up"></i></button>
-                </div>
+                <div class="caption">O - Outlet</div>
                 <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/usb.jpg" alt="U - USB">
-                <div class="caption">
-                    <span>U - USB</span>
-                    <button class="thumbs-like"><i class="fa fa-thumbs-up"></i></button>
-                </div>
+                <div class="caption">U - USB</div>
                 <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/door.jpg" alt="D - Door">
-                <div class="caption">
-                    <span>D - Door</span>
-                    <button class="thumbs-like"><i class="fa fa-thumbs-up"></i></button>
-                </div>
+                <div class="caption">D - Door</div>
                 <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/coin.jpg" alt="C - Coin">
-                <div class="caption">
-                    <span>C - Coin</span>
-                    <button class="thumbs-like"><i class="fa fa-thumbs-up"></i></button>
-                </div>
+                <div class="caption">C - Coin</div>
                 <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/oil.jpg" alt="O - Oil">
-                <div class="caption">
-                    <span>O - Oil</span>
-                    <button class="thumbs-like"><i class="fa fa-thumbs-up"></i></button>
-                </div>
+                <div class="caption">O - Oil</div>
                 <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/book.jpg" alt="B - Book">
-                <div class="caption">
-                    <span>B - Book</span>
-                    <button class="thumbs-like"><i class="fa fa-thumbs-up"></i></button>
-                </div>
+                <div class="caption">B - Book</div>
                 <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/rhyme.jpg" alt="R - Rhyme">
-                <div class="caption">
-                    <span>R - Rhyme</span>
-                    <button class="thumbs-like"><i class="fa fa-thumbs-up"></i></button>
-                </div>
+                <div class="caption">R - Rhyme</div>
                 <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/antennae.jpg" alt="A - Antennae">
-                <div class="caption">
-                    <span>A - Antennae</span>
-                    <button class="thumbs-like"><i class="fa fa-thumbs-up"></i></button>
-                </div>
+                <div class="caption">A - Antennae</div>
                 <div class="timer-bar"></div>
             </div>
         </div>
@@ -104,6 +74,7 @@
                 <button id="forward"><i class="fa fa-forward"></i></button>
                 <button id="end"><i class="fa fa-fast-forward"></i></button>
                 <button id="fullscreen" class="full-screen"><i class="fa fa-arrows-alt"></i></button>
+                <button class="thumbs-like"><i class="fa fa-thumbs-up"></i></button>
             </div>
         </div>
         <ul class="slide-list">
@@ -121,5 +92,6 @@
     </main>
     <div data-include="components/footer.html"></div>
     <script src="scripts/include.min.js"></script>
+    <script src="scripts/slideshow.js"></script>
 </body>
 </html>
