--- a/itis3135/example_slideshow.html
+++ b/itis3135/example_slideshow.html
@@ -3,59 +3,67 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/4d0fe3.js" crossorigin="anonymous"></script>
     <title>Proud Cobra || ITIS-3135 || Slideshow</title>
     <link rel="stylesheet" href="styles/default.css">
     <style>
         /* Overall container for the slideshow */
         #slideshow-container {
-            position: relative; /* Allows for absolute positioning of elements within */
-            width: 500px;      /* Fixed width, adjust as needed */
-            margin: 20px auto; /* Center the slideshow on the page */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for visual separation */
-            /*overflow: hidden; Important, clips progress bar and any overflowing elements*/
+            position: relative;
+            width: 500px;
+            margin: 20px auto;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         /* Style for the image display */
         #slideshow-image {
-            width: 100%; /* Image takes the full width of the container */
-            display: block; /* Removes extra space below the image */
-            height: auto;  /*Maintain aspect ratio*/
+            width: 100%;
+            display: block;
+            height: auto;
+            object-fit: contain;
         }
 
         /* Style for the caption text */
         #caption {
-            position: absolute; /* Positioned relative to the container */
-            top: 0;           /* At the top of the container */
-            left: 0;          /* At the left edge */
-            width: 100%;      /* Full width of the container */
-            background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent background */
-            color: white;         /* White text */
-            padding: 10px;      /* Add some padding around the text */
-            text-align: center;    /* Center the text */
-            font-size: 1em;       /* Adjust font size as needed */
-            box-sizing: border-box; /*Include padding in width*/
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: rgba(0, 0, 0, 0.6);
+            color: white;
+            padding: 10px;
+            text-align: center;
+            font-size: 1em;
+            box-sizing: border-box;
+            z-index: 2;
         }
 
         /* Style for the controls container */
         #controls {
-            position: absolute; /* Positioned relative to the container */
-            bottom: 30px;        /* Space between controls and bottom of container*/
+            position: absolute;
+            bottom: 8px;
             left: 0;
             width: 100%;
             padding: 10px;
             text-align: center;
             box-sizing: border-box;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 3;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         /* Style for the control buttons */
         #controls button {
-            background: none; /* No background color */
-            border: none;   /* No border */
-            color: white;     /* White icon color */
-            font-size: 1.2em;  /* Adjust icon size as needed */
-            margin: 0 10px;  /* Space between buttons */
-            cursor: pointer;  /* Show a pointer cursor on hover */
+            background: none;
+            border: none;
+            color: white;
+            font-size: 1.2em;
+            margin: 0 10px;
+            cursor: pointer;
             padding: 5px;
         }
 
@@ -67,16 +75,18 @@
             width: 100%;
             height: 8px;
             background-color: rgba(128, 128, 128, 0.7);
-            overflow: hidden;  /* Ensure the progress bar doesn't overflow */
+            overflow: hidden;
+            z-index: 1;
         }
 
         /* Style for the progress bar itself */
         #progress-bar {
             height: 100%;
-            width: 0%; /* Start with 0% width */
+            width: 0%;
             background-color: white;
-            transition: none; /* Removed default transition */
+            transition: none;
         }
+
         .fullscreen-mode #slideshow-container {
             width: 100%;
             height: 100vh;
@@ -88,8 +98,9 @@
         }
 
         .fullscreen-mode #slideshow-image {
-            max-width: 100%;
-            max-height: 80%; /* leave space for controls and caption*/
+            height: 100%;
+            width: 100%;
+            object-fit: contain;
         }
 
         .fullscreen-mode #caption {
@@ -100,7 +111,60 @@
             font-size: 1.5em;
             margin: 0 15px;
         }
+
+        /* CSS for settings popup */
+        #settings-popup {
+            display: none;
+            position: absolute;
+            top: -100px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 0, 0, 0.8);
+            color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 10;
+            width: 250px;
+        }
+
+        #settings-popup label {
+            display: block;
+            margin-bottom: 5px;
+            font-size: 1em;
+        }
+
+        #settings-popup input[type="range"] {
+            width: 100%;
+            margin-bottom: 10px;
+        }
+
+        #settings-popup button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1em;
+            transition: background-color 0.3s ease;
+            display: block;
+            margin: 0 auto;
+        }
+
+        #settings-popup button:hover {
+            background-color: #367c39;
+        }
+
+        .settings-open #settings-popup {
+            display: block;
+        }
+
+        #settings-btn {
+            /* Removed position: absolute, top, right */
+        }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div data-include="components/header.html"></div>
@@ -112,14 +176,20 @@
             <div id="controls">
                 <button id="beginning-btn" aria-label="Beginning"><i class="fa-solid fa-backward-fast"></i></button>
                 <button id="back-btn" aria-label="Previous"><i class="fa-solid fa-backward"></i></button>
-                <button id="play-pause-btn" aria-label="Play"><i class="fa-solid fa-play"></i></button>
                 <button id="stop-btn" aria-label="Stop"><i class="fa-solid fa-stop"></i></button>
+                <button id="play-pause-btn" aria-label="Play"><i class="fa-solid fa-pause"></i></button>
                 <button id="forward-btn" aria-label="Next"><i class="fa-solid fa-forward"></i></button>
                 <button id="end-btn" aria-label="End"><i class="fa-solid fa-forward-fast"></i></button>
+                <button id="settings-btn" aria-label="Settings"><i class="fa-solid fa-gear"></i></button>
                 <button id="fullscreen-btn" aria-label="Fullscreen"><i class="fa-solid fa-expand"></i></button>
             </div>
             <div id="progress-bar-container">
                 <div id="progress-bar"></div>
+            </div>
+            <div id="settings-popup">
+                <label for="speed-slider">Speed:</label>
+                <input type="range" id="speed-slider" min="1000" max="10000" value="5000">
+                <button id="settings-save">Save</button>
             </div>
         </div>
     </main>
@@ -143,7 +213,9 @@
             let currentIndex = 0;
             let intervalId;
             let isPlaying = true;
-            const slideDuration = 3000;
+            let timeElapsed = 0;
+            let animationFrameId;
+            let slideDuration = 5000; // Initial slide duration
 
             const slideshowImage = document.getElementById("slideshow-image");
             const captionElement = document.getElementById("caption");
@@ -155,36 +227,36 @@
             const forwardBtn = document.getElementById("forward-btn");
             const endBtn = document.getElementById("end-btn");
             const fullscreenBtn = document.getElementById("fullscreen-btn");
-            const slideshowContainer = document.getElementById("slideshow-container");
+            const settingsBtn = document.getElementById("settings-btn");
+            const settingsPopup = document.getElementById("settings-popup");
+            const speedSlider = document.getElementById("speed-slider");
+            const settingsSaveBtn = document.getElementById("settings-save");
 
 
             function loadImage(index) {
                 slideshowImage.src = images[index];
                 captionElement.textContent = captions[index];
-                progressBar.style.width = "0%"; // Reset progress bar to 0%
-                progressBar.style.transition = 'none'; // Remove any existing transition
-                setTimeout(() => {
-                    progressBar.style.transition = `width ${slideDuration}ms linear`; // Add the transition
-                    progressBar.style.width = "100%"; // Start the animation
-                }, 0);
+                progressBar.style.width = "0%";
+                timeElapsed = 0;
+                progressBar.style.transition = 'none';
+                if (isPlaying) {
+                    requestAnimationFrame(updateProgressBar);
+                }
             }
 
             function playSlideshow() {
-                if (!isPlaying) return;
-                clearInterval(intervalId); // Clear any existing interval
-                intervalId = setInterval(() => {
-                    currentIndex = (currentIndex + 1) % images.length;
-                    loadImage(currentIndex);
-                }, slideDuration);
-                playPauseBtn.innerHTML = '<i class="fa-solid fa-pause"></i>';
-                isPlaying = true;
+                if (!isPlaying) {
+                    isPlaying = true;
+                    playPauseBtn.innerHTML = '<i class="fa-solid fa-pause"></i>';
+                    requestAnimationFrame(updateProgressBar);
+                }
             }
 
+
             function pauseSlideshow() {
-                clearInterval(intervalId);
                 isPlaying = false;
                 playPauseBtn.innerHTML = '<i class="fa-solid fa-play"></i>';
-                progressBar.style.transition = 'none';
+                cancelAnimationFrame(animationFrameId);
             }
 
             function stopSlideshow() {
@@ -223,21 +295,47 @@
             }
 
             function toggleFullscreen() {
-              if (!document.fullscreenElement) {
-                slideshowContainer.requestFullscreen().then(() => {
-                  document.body.classList.add('fullscreen-mode');
-                  playSlideshow();
-                }).catch(err => {
-                  console.error(`Error attempting to enable full-screen mode: ${err.message} (${err.name})`);
-                });
-              } else {
-                document.exitFullscreen().then(() => {
-                  document.body.classList.remove('fullscreen-mode');
-                  playSlideshow();
-                });
-              }
+                if (!document.fullscreenElement) {
+                    slideshowContainer.requestFullscreen().then(() => {
+                        document.body.classList.add('fullscreen-mode');
+                        playSlideshow();
+                    }).catch(err => {
+                        console.error(`Error attempting to enable full-screen mode: ${err.message} (${err.name})`);
+                    });
+                } else {
+                    document.exitFullscreen().then(() => {
+                        document.body.classList.remove('fullscreen-mode');
+                        playSlideshow();
+                    });
+                }
             }
 
+            function updateProgressBar() {
+                if (!isPlaying) return;
+                timeElapsed += 16;
+                const width = (timeElapsed / slideDuration) * 100;
+                progressBar.style.width = `${width}%`;
+                if (width >= 100) {
+                    currentIndex = (currentIndex + 1) % images.length;
+                    loadImage(currentIndex);
+                } else {
+                    animationFrameId = requestAnimationFrame(updateProgressBar);
+                }
+            }
+
+            settingsBtn.addEventListener('click', () => {
+                slideshowContainer.classList.toggle('settings-open');
+            });
+
+            settingsSaveBtn.addEventListener('click', () => {
+                slideDuration = parseInt(speedSlider.value);
+                slideshowContainer.classList.remove('settings-open');
+                // Restart the slideshow to apply the new speed
+                if (isPlaying) {
+                    pauseSlideshow();
+                    playSlideshow();
+                }
+            });
 
 
             playPauseBtn.addEventListener("click", () => {
@@ -277,6 +375,7 @@
                 }
             });
             loadImage(currentIndex);
+            // Start slideshow, show pause button
             playSlideshow();
         });
     </script>
