Slideshow: Fixed some code in secondary

--- a/itis3135/example_slideshow.html
+++ b/itis3135/example_slideshow.html
@@ -9,7 +9,7 @@
         /* Overall container for the slideshow */
         #slideshow-container {
             position: relative;
-            width: 500px;
+            width: 800px;
             margin: 20px auto;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             display: flex;
@@ -198,16 +198,16 @@
     <script>
        document.addEventListener('DOMContentLoaded', function() {
             const images = [
-                "https://puzzle5.github.io/itis3135/images/slideshow/pencil.jpg",
-                "https://puzzle5.github.io/itis3135/images/slideshow/router.jpg",
-                "https://puzzle5.github.io/itis3135/images/slideshow/outlet.jpg",
-                "https://puzzle5.github.io/itis3135/images/slideshow/usb.jpg",
-                "https://puzzle5.github.io/itis3135/images/slideshow/door.jpg",
-                "https://puzzle5.github.io/itis3135/images/slideshow/coin.jpg",
-                "https://puzzle5.github.io/itis3135/images/slideshow/oil.jpg",
-                "https://puzzle5.github.io/itis3135/images/slideshow/book.jpg",
-                "https://puzzle5.github.io/itis3135/images/slideshow/rhyme.jpg",
-                "https://puzzle5.github.io/itis3135/images/slideshow/antennae.jpg"
+                "images/slideshow/pencil.jpg",
+                "images/slideshow/router.jpg",
+                "images/slideshow/outlet.jpg",
+                "images/slideshow/usb.jpg",
+                "images/slideshow/door.jpg",
+                "images/slideshow/coin.jpg",
+                "images/slideshow/oil.jpg",
+                "images/slideshow/book.jpg",
+                "images/slideshow/rhyme.jpg",
+                "images/slideshow/antennae.jpg"
             ];
             const captions = ["Pencil", "Router", "Outlet", "USB", "Door", "Coin", "Oil", "Book", "Rhyme", "Antennae"];
             let currentIndex = 0;
