--- a/itis3135/example_slideshow.html
+++ b/itis3135/example_slideshow.html
@@ -187,7 +187,7 @@
                 <div id="progress-bar"></div>
             </div>
             <div id="settings-popup">
-                <label for="speed-slider">Speed:</label>
+                <label for="speed-slider">Duration:</label>
                 <input type="range" id="speed-slider" min="1000" max="10000" value="5000">
                 <button id="settings-save">Save</button>
             </div>
