--- a/itis3135/example_slideshow.html
+++ b/itis3135/example_slideshow.html
@@ -142,7 +142,7 @@
         #settings-popup button {
             background-color: #4CAF50;
             color: white;
-            padding: 10px 15px;
+/*             padding: 10px 15px; */
             border: none;
             border-radius: 5px;
             cursor: pointer;
