--- a/itis3135/drawing.html
+++ b/itis3135/drawing.html
@@ -16,7 +16,7 @@
         <main>
             <h2>Interactive Drawing with p5.js</h2>
             <p>This page uses p5.js to create an interactive drawing.</p>
-            <div id="p5-container"></div>
+            <div class="canvas-main"><div id="p5-container"></div></div>
         </main>
         <div data-include="components/footer.html"></div>
         <script src="scripts/include.min.js"></script>
